--- a/bioestetica-site/src/App.css
+++ b/bioestetica-site/src/App.css
@@ -5,6 +5,7 @@
   width: 100vw;
   min-height: 100vh;
   padding: 0;
+  background: var(--cor-bg);
 }
 
 .logo {
@@ -37,8 +38,9 @@
 
 .card {
   padding: 2em;
+  background: var(--cor-bg-card);
 }
 
 .read-the-docs {
-  color: #888;
+  color: var(--cor-cinza);
 }
