--- a/bioestetica-site/src/components/Header.css
+++ b/bioestetica-site/src/components/Header.css
@@ -89,6 +89,7 @@
   height: 3px;
   background: var(--cor-marrom);
   position: relative;
+  transition: background 0.3s;
 }
 .menu-icon::before,
 .menu-icon::after {
@@ -107,14 +108,44 @@
 .menu-icon::after {
   top: 9px;
 }
+.menu-icon.open {
+  background: transparent;
+}
+.menu-icon.open::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+.menu-icon.open::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
 @media (max-width: 800px) {
   .header {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 1rem 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.7rem 3vw 0.7rem 3vw;
+    width: 100vw;
+    max-width: 100vw;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  }
+  .header-left {
+    width: auto;
+    justify-content: flex-start;
+    padding-left: 0;
+    margin: 0;
+    align-items: center;
   }
   .menu-toggle {
     display: block;
+    position: static;
+    right: unset;
+    top: unset;
+    margin-left: auto;
+    z-index: 20;
+    padding: 0.5rem;
   }
   .header-nav {
     display: none;
