--- a/bioestetica-site/src/components/Header.css
+++ b/bioestetica-site/src/components/Header.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1vw;
+  padding: 0 2vw;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -37,7 +37,7 @@
   object-fit: contain;
   pointer-events: none;
   user-select: none;
-  margin: 0;
+  margin: 0 0 0 2vw;
   box-shadow: none !important;
 }
 .header-title-group {
@@ -61,7 +61,7 @@
 .header-nav {
   display: flex;
   gap: 2.5rem;
-  padding-right: 1vw;
+  padding-right: 2vw;
 }
 .header-nav a {
   color: var(--cor-marrom);
@@ -82,6 +82,7 @@
   margin-left: auto;
   padding: 0.5rem;
   z-index: 20;
+  margin-right: 2vw;
 }
 .menu-icon {
   display: block;
@@ -124,12 +125,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0.7rem 3vw 0.7rem 3vw;
+    padding: 0.1rem 4vw 0.1rem 4vw;
     width: 100vw;
     max-width: 100vw;
     position: sticky;
     top: 0;
     z-index: 10;
+    min-height: unset;
+    height: auto;
+    box-sizing: border-box;
+    background: var(--cor-bg);
   }
   .header-left {
     width: auto;
@@ -138,37 +143,46 @@
     margin: 0;
     align-items: center;
   }
+  /* NÃO mexer no tamanho da logo! */
+  .logo {
+    margin-left: 0;
+    margin-right: 0;
+  }
   .menu-toggle {
-    display: block;
-    position: static;
-    right: unset;
-    top: unset;
     margin-left: auto;
+    margin-right: 4vw;
+    display: block;
     z-index: 20;
-    padding: 0.5rem;
+    padding: 0.3rem;
   }
   .header-nav {
     display: none;
     flex-direction: column;
     width: 100vw;
+    max-width: 100vw;
     background: var(--cor-bg);
     position: absolute;
     top: 100%;
     left: 0;
+    right: 0;
     box-shadow: 0 4px 16px rgba(139, 106, 83, 0.07);
-    padding: 1.2rem 0 1.2rem 0;
+    padding: 0.5rem 0 0.5rem 0;
     margin: 0;
-    gap: 1.2rem;
+    gap: 0.3rem;
     z-index: 15;
-    margin-top: 0.7rem;
-    gap: 1.2rem;
+    margin-top: 0.1rem;
     padding-right: 0;
+    border-radius: 0 0 1.2rem 1.2rem;
+    padding-left: 4vw;
+    padding-right: 4vw;
   }
   .header-nav.open {
     display: flex;
   }
   .header-nav a {
-    padding: 0.7rem 2rem;
-    font-size: 1.2rem;
+    padding: 0.5rem 1.2rem;
+    font-size: 1.01rem;
+    text-align: left;
+    line-height: 1.2;
   }
 }
