--- a/bioestetica-site/src/index.css
+++ b/bioestetica-site/src/index.css
@@ -28,12 +28,17 @@ html,
   color: var(--cor-texto);
   box-sizing: border-box;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   width: 100%;
   margin: 0;
   padding: 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 section,
